Changes to the validations